--- a/data.qrc
+++ b/data.qrc
@@ -1,2 +1,5 @@
-<!DOCTYPE RCC>
-<RCC version="1.0"/>
+<RCC>
+    <qresource prefix="/data">
+        <file>data.json</file>
+    </qresource>
+</RCC>
