--- a/logindialog.ui
+++ b/logindialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>243</width>
-    <height>140</height>
+    <width>443</width>
+    <height>228</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,10 +16,10 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>10</y>
-     <width>211</width>
-     <height>122</height>
+     <x>80</x>
+     <y>20</y>
+     <width>291</width>
+     <height>161</height>
     </rect>
    </property>
    <property name="font">
@@ -38,7 +38,7 @@
          </font>
         </property>
         <property name="text">
-         <string>username</string>
+         <string>Username  </string>
         </property>
        </widget>
       </item>
@@ -63,7 +63,7 @@
          </font>
         </property>
         <property name="text">
-         <string>password</string>
+         <string>Password  </string>
         </property>
        </widget>
       </item>
