--- a/signup.ui
+++ b/signup.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>signup</class>
- <widget class="QWidget" name="signup">
+ <class>Signup</class>
+ <widget class="QWidget" name="Signup">
   <property name="geometry">
    <rect>
     <x>0</x>
