some bugs in signup class fixed... but lots of bugs and errors still remain

--- a/login.ui
+++ b/login.ui
@@ -74,6 +74,9 @@
           <family>MV Boli</family>
          </font>
         </property>
+        <property name="echoMode">
+         <enum>QLineEdit::Normal</enum>
+        </property>
        </widget>
       </item>
      </layout>
