Fixed many many Ui problems, singup and login bugs, etc.....

--- a/login.ui
+++ b/login.ui
@@ -75,7 +75,7 @@
          </font>
         </property>
         <property name="echoMode">
-         <enum>QLineEdit::Normal</enum>
+         <enum>QLineEdit::Password</enum>
         </property>
        </widget>
       </item>
