--- a/login.ui
+++ b/login.ui
@@ -116,6 +116,13 @@
       </item>
      </layout>
     </item>
+    <item>
+     <widget class="QLabel" name="loginStat">
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
  </widget>
