minor issues fixed

--- a/map.ui
+++ b/map.ui
@@ -39,6 +39,19 @@
     <string>1</string>
    </property>
   </widget>
+  <widget class="QLabel" name="userlbl">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>240</y>
+     <width>47</width>
+     <height>13</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
